# Chatbot-com-Google-Gemini

./: README.md  app.py  pyproject.toml  teste_modelos.py
